--- a/gallery.html
+++ b/gallery.html
@@ -41,16 +41,16 @@
         <section class="gallery container">
             <h2 class="gallery-title">Photo<br><strong>Gallery</strong></h2>
             <div class="gallery-photos">
-                <img src="/public/gallery/photo1.jpeg" alt="Image">
-                <img src="/public/gallery/photo2.jpeg" alt="Image">
-                <img src="/public/gallery/photo3.jpeg" alt="Image">
-                <img src="/public/gallery/photo4.jpeg" alt="Image">
-                <img src="/public/gallery/photo5.jpeg" alt="Image">
-                <img src="/public/gallery/photo6.jpeg" alt="Image">
-                <img src="/public/gallery/photo7.jpeg" alt="Image">
-                <img src="/public/gallery/photo8.jpeg" alt="Image">
-                <img src="/public/gallery/photo9.jpeg" alt="Image">
-                <img src="/public/gallery/photo10.jpeg" alt="Image">
+                <img src="/public/gallery/photo1.jpg" alt="Image">
+                <img src="/public/gallery/photo2.jpg" alt="Image">
+                <img src="/public/gallery/photo3.jpg" alt="Image">
+                <img src="/public/gallery/photo4.jpg" alt="Image">
+                <img src="/public/gallery/photo5.jpg" alt="Image">
+                <img src="/public/gallery/photo6.jpg" alt="Image">
+                <img src="/public/gallery/photo7.jpg" alt="Image">
+                <img src="/public/gallery/photo8.jpg" alt="Image">
+                <img src="/public/gallery/photo9.jpg" alt="Image">
+                <img src="/public/gallery/photo10.jpg" alt="Image">
             </div>
 
             <div class="gallery-slider">
@@ -82,7 +82,7 @@
                         <h3 class="footer-title">Information</h3>
                     </div>
 
-                    <div class="page">
+                    <div class="footer-pages">
                         <a href="index.html">Main</a>
                         <a href="gallery.html">Gallery</a>
                         <a href="#">Projects</a>
