Add projects page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="gallery.html">Gallery</a>
         </li>
         <li class="header-link">
-          <a href="#">Projects</a>
+          <a href="projects.html">Projects</a>
         </li>
         <li class="header-link">
           <a href="#">Certification</a>
@@ -187,13 +187,13 @@
         </div>
         <div class="information-container">
           <div class="">
-            <h3 class="footer-title">Information</h3>
+            <h4 class="footer-title">Information</h4>
           </div>
 
           <div class="footer-pages">
             <a href="index.html">Main</a>
             <a href="gallery.html">Gallery</a>
-            <a href="#">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="#">Certifications</a>
             <a href="#">Contacts</a>
           </div>
@@ -201,7 +201,7 @@
         </div>
 
         <div class="contacts-container">
-          <h3 class="footer-title">Contacts</h3>
+          <h4 class="footer-title">Contacts</h4>
           <div class="address">
             <img class="contact-icon" src="/public/map_icon.svg" alt="Map icon">
             <a href="https://maps.app.goo.gl/JvSjJqxTfXS1pSZp6">1234 Sample Street <br>Austin Texas 78704</a>
@@ -217,7 +217,7 @@
         </div>
 
         <div class="socials-container">
-          <h3 class="footer-title">Social Media</h3>
+          <h4 class="footer-title">Social Media</h4>
           <a href="https://www.facebook.com/" target="_blank">
             <img src="/public/facebook-logo.svg" alt="Facebook">
           </a>
@@ -233,7 +233,7 @@
         </div>
       </div>
       <div class="footer-rights">
-        <h4>© 2024 All Rights Reserved</h4>
+        <h5>© 2024 All Rights Reserved</h5>
       </div>
     </footer>
   </main>
