Complete projects page

--- a/projects.html
+++ b/projects.html
@@ -41,40 +41,67 @@
             <h2 class="title">Our<br><strong>Projects</strong></h2>
             <div class="projects-wrap">
                 <div class="project">
-                    <img class="i1" src="/public/gallery/photo1.jpg" alt="photo">
-                    <h3>Sample Project</h3>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                        type
-                        and scrambled it to make a type specimen book.
-                    </p>
-                    <button>View More</button>
+                    <img class="project-photo" src="/public/projects/project1.jpg" alt="photo">
+                    <div class="project-content">
+                        <h3>Sample Project</h3>
+                        <p class="project-description">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been
+                            the
+                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            of
+                            type
+                            and scrambled it to make a type specimen book.
+                        </p>
+
+                        <!-- View btn -->
+                        <a class="btn-view-wrapper btn-wrapper" href="/project1.html">
+                            <button class="btn-view btn">View More</button>
+                            <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
+                        </a>
+                    </div>
                 </div>
                 <div class="project">
-                    <img src="/public/gallery/photo1.jpg" alt="photo">
-                    <h3>Sample Project</h3>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                        type
-                        and scrambled it to make a type specimen book.
-                    </p>
-                    <button>View More</button>
+                    <img class="project-photo" src="/public/projects/project2.jpg" alt="photo">
+                    <div class="project-content">
+                        <h3>Sample Project 2</h3>
+                        <p class="project-description">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been
+                            the
+                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            of
+                            type
+                            and scrambled it to make a type specimen book.
+                        </p>
+                        <!-- View btn -->
+                        <div class="btn-view-wrapper btn-wrapper">
+                            <button class="btn-view btn">View More</button>
+                            <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
+                        </div>
+                    </div>
+
                 </div>
                 <div class="project">
-                    <img src="/public/gallery/photo1.jpg" alt="photo">
-                    <h3>Sample Project</h3>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the
-                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                        type
-                        and scrambled it to make a type specimen book.
-                    </p>
-                    <button>View More</button>
+                    <img class="project-photo" src="/public/projects/project3.jpg" alt="photo">
+                    <div class="project-content">
+                        <h3>Sample Project 3</h3>
+                        <p class="project-description">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been
+                            the
+                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            of
+                            type
+                            and scrambled it to make a type specimen book.
+                        </p>
+                        <!-- View btn -->
+                        <div class="btn-view-wrapper btn-wrapper">
+                            <button class="btn-view btn">View More</button>
+                            <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
