--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="icon" href="/public/favicon.svg" type="image/x-icon">
     <title>Projects</title>
 </head>
 
@@ -55,7 +56,7 @@
                         </p>
 
                         <!-- View btn -->
-                        <a class="btn-view-wrapper btn-wrapper" href="/project1.html">
+                        <a class="btn-view-wrapper btn-wrapper" href="/sample-project.html">
                             <button class="btn-view btn">View More</button>
                             <img class="arrow" src="/public/arrow-right.svg" alt="arrow">
                         </a>
