Complete samlpe pj page

--- a/certifications.html
+++ b/certifications.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="icon" href="/public/favicon.svg" type="image/x-icon">
-    <title>Photo Gallery</title>
+    <title>Certifications</title>
 </head>
 
 <body>
@@ -18,16 +18,16 @@
         <img class="logo" src="/public/logo.svg" alt="logo">
         <nav>
             <ul class="header-menu">
-                <li class="header-link">
+                <li class="header-link ">
                     <a href="index.html">Main</a>
                 </li>
-                <li class="header-link active-page">
+                <li class="header-link">
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li class="header-link">
                     <a href="projects.html">Projects</a>
                 </li>
-                <li class="header-link">
+                <li class="header-link active-page">
                     <a href="certifications.html">Certification</a>
                 </li>
                 <li class="header-link">
@@ -38,40 +38,11 @@
     </header>
 
     <main>
-        <!-- GALLERY SECTION-->
-        <section class="gallery container">
-            <h2 class="title">Photo<br><strong>Gallery</strong></h2>
-            <div class="gallery-photos">
-                <img src="/public/gallery/photo1.jpg" alt="Image">
-                <img src="/public/gallery/photo2.jpg" alt="Image">
-                <img src="/public/gallery/photo3.jpg" alt="Image">
-                <img src="/public/gallery/photo4.jpg" alt="Image">
-                <img src="/public/gallery/photo5.jpg" alt="Image">
-                <img src="/public/gallery/photo6.jpg" alt="Image">
-                <img src="/public/gallery/photo7.jpg" alt="Image">
-                <img src="/public/gallery/photo8.jpg" alt="Image">
-                <img src="/public/gallery/photo9.jpg" alt="Image">
-                <img src="/public/gallery/photo10.jpg" alt="Image">
-            </div>
-
-            <!-- slider -->
-            <div class="slider">
-                <div class="counter">
-                    <div class="current-project-wrap">
-                        <span class="current-gallery-counter">0</span>
-                        <span class="current-gallery-counter">1</span>
-                    </div>
-                    <span class="border-counter"></span>
-                    <span class="project-counter">05</span>
-                </div>
-                <div class="gallery-btn-slider">
-                    <button class="arrow-left-btn">
-                        <img src="/public/arrow-left.svg" alt="arrow button">
-                    </button>
-                    <button class="arrow-right-btn arrow-active-btn">
-                        <img src="/public/arrow-right.svg" alt="arrow button">
-                    </button>
-                </div>
+        <section class="certifications container">
+            <h2 class="title">Company<br><strong>Certifications</strong></h2>
+            <div class="certifications-wrap">
+                <img src="/public/Certificate.jpg" alt="image">
+                <img src="/public/Certificate2.jpg" alt="image">
             </div>
         </section>
 
@@ -90,7 +61,7 @@
                         <a href="index.html">Main</a>
                         <a href="gallery.html">Gallery</a>
                         <a href="projects.html">Projects</a>
-                        <a href="certifications.html">Certifications</a>
+                        <a href="#">Certifications</a>
                         <a href="#">Contacts</a>
                     </div>
 
@@ -134,6 +105,7 @@
             </div>
         </footer>
     </main>
+
     <script type="module" src="/src/main.js"></script>
 </body>
 
