--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="projects.html">Projects</a>
         </li>
         <li class="header-link">
-          <a href="#">Certification</a>
+          <a href="certifications.html">Certification</a>
         </li>
         <li class="header-link">
           <a href="#">Contact</a>
@@ -195,7 +195,7 @@
             <a href="index.html">Main</a>
             <a href="gallery.html">Gallery</a>
             <a href="projects.html">Projects</a>
-            <a href="#">Certifications</a>
+            <a href="certifications.html">Certifications</a>
             <a href="#">Contacts</a>
           </div>
 
