--- a/sample-project.html
+++ b/sample-project.html
@@ -9,8 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="icon" href="/public/favicon.svg" type="image/x-icon">
-
-    <title>Document</title>
+    <title>Sample Project</title>
 </head>
 
 <body>
@@ -29,14 +28,102 @@
                     <a href="projects.html">Projects</a>
                 </li>
                 <li class="header-link">
-                    <a href="#">Certification</a>
+                    <a href="certifications.html">Certification</a>
                 </li>
                 <li class="header-link">
-                    <a href="#">Contact</a>
+                    <a href="certifications.html">Contact</a>
                 </li>
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section class="sample-project container">
+            <h2 class="title">Sample<br><strong>Project 1</strong></h2>
+            <img class="sample-photo1" src="/public/projects/sample-pj1.jpeg" alt="image">
+
+            <div class="sample-photo-wrap">
+                <img src="/public/projects/sample-pj2.jpg" alt="image">
+                <p class="sample-description">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                    publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply
+                    dummy text of the printing and typesetting industry.It has survived not only five centuries, but
+                    also the leap into electronic typesetting, remaining essentially unchanged.
+                </p>
+            </div>
+
+            <img class="sample-photo3" src="/public/projects/sample-pj4.jpeg" alt="image">
+            <p class="sample-description2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                with the release of Letraset sheets containing Lorem Ipsum passages.
+            </p>
+        </section>
+        <!-- FOOTER -->
+        <footer class="footer section">
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img src="/public/logo-light.svg" alt="Logo">
+                </div>
+                <div class="information-container">
+                    <div class="">
+                        <h4 class="footer-title">Information</h4>
+                    </div>
+
+                    <div class="footer-pages">
+                        <a href="index.html">Main</a>
+                        <a href="gallery.html">Gallery</a>
+                        <a href="projects.html">Projects</a>
+                        <a href="certifications.html">Certifications</a>
+                        <a href="#">Contacts</a>
+                    </div>
+
+                </div>
+
+                <div class="contacts-container">
+                    <h4 class="footer-title">Contacts</h4>
+                    <div class="address">
+                        <img class="contact-icon" src="/public/map_icon.svg" alt="Map icon">
+                        <a href="https://maps.app.goo.gl/JvSjJqxTfXS1pSZp6">1234 Sample Street <br>Austin Texas
+                            78704</a>
+                    </div>
+                    <div class="phone-num">
+                        <img class="contact-icon" src="/public/phone_icon.svg" alt="Phone icon">
+                        <a href="tel:512.333.2222">512.333.2222</a>
+                    </div>
+                    <div class="email">
+                        <img class="contact-icon" src="/public/email_icon.svg" alt="Email icon">
+                        <a href="mailto:sampleemail@gmail.com">sampleemail@gmail.com</a>
+                    </div>
+                </div>
+
+                <div class="socials-container">
+                    <h4 class="footer-title">Social Media</h4>
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <img src="/public/facebook-logo.svg" alt="Facebook">
+                    </a>
+                    <a href="https://twitter.com/" target="_blank">
+                        <img src="public/x-logo.svg" alt="Twitter">
+                    </a>
+                    <a href="https://www.linkedin.com/" target="_blank">
+                        <img src="/public/linked-logo.svg" alt="Linked In">
+                    </a>
+                    <a href="https://www.pinterest.com/" target="_blank">
+                        <img src="/public/pinterest-logo.svg" alt="Pinterest">
+                    </a>
+                </div>
+            </div>
+            <div class="footer-rights">
+                <h5>© 2024 All Rights Reserved</h5>
+            </div>
+        </footer>
+    </main>
 
     <script type="module" src="/src/main.js"></script>
 </body>
