Complete certifications page

--- a/certifications.html
+++ b/certifications.html
@@ -40,9 +40,36 @@
     <main>
         <section class="certifications container">
             <h2 class="title">Company<br><strong>Certifications</strong></h2>
+
             <div class="certifications-wrap">
-                <img src="/public/Certificate.jpg" alt="image">
-                <img src="/public/Certificate2.jpg" alt="image">
+                <img class="certificate-img" src="/public/certificate.jpg" alt="certificate">
+
+
+                <div class="certificate-content">
+                    <div class="certificate-title">
+                        <img class="certificate-mark" src="/public/certificate-mark.svg" alt="image">
+                        <h3>Academic<br>Proficiency Award</h3>
+                    </div>
+                    <p class="certificate-description">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut velit ut temporibus, quas libero,
+                        minus possimus corporis sint obcaecati quisquam, doloribus omnis facere magnam dolorum iste?
+                        Dignissimos
+                        illo quos quibusdam!
+                    </p>
+
+                    <!-- slider -->
+                    <div class="slider">
+                        <div class="gallery-btn-slider">
+                            <button class="arrow-left-btn">
+                                <img src="/public/arrow-left.svg" alt="arrow button">
+                            </button>
+                            <button class="arrow-right-btn arrow-active-btn">
+                                <img src="/public/arrow-right.svg" alt="arrow button">
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
